import { describe, expect, it } from 'vitest'
import { hardenedRhel, KICKSTART_FIXTURES, minimalRhel } from '@/__fixtures__/sampleSpecs'
import { emitKickstart } from './emitKickstart'

describe('emitKickstart', () => {
  // Golden-file snapshots: any change to emitted bytes shows up in review.
  it.each(KICKSTART_FIXTURES)('golden output: $name', ({ spec }) => {
    expect(emitKickstart(spec).files[0]?.content).toMatchSnapshot()
  })

  it('produces a single ks.cfg kickstart file', () => {
    const { files } = emitKickstart(minimalRhel)
    expect(files).toHaveLength(1)
    expect(files[0]?.filename).toBe('ks.cfg')
    expect(files[0]?.language).toBe('kickstart')
  })

  it('emits the canonical command/%packages/%end skeleton', () => {
    const out = emitKickstart(minimalRhel).files[0]?.content ?? ''
    expect(out.startsWith('# Kickstart generated by linux-generators')).toBe(true)
    expect(out).toContain('\ntext\n')
    expect(out).toContain('%packages')
    expect(out.trimEnd().endsWith('%end')).toBe(true)
    expect(out).toContain('reboot')
  })

  it('is deterministic (same spec → identical bytes)', () => {
    expect(emitKickstart(minimalRhel).files[0]?.content).toBe(
      emitKickstart(minimalRhel).files[0]?.content,
    )
  })

  it('passes the encryption passphrase through autopart', () => {
    const out = emitKickstart(hardenedRhel).files[0]?.content ?? ''
    expect(out).toContain('autopart --type=lvm --encrypted --passphrase=changeit')
  })

  it('warns when AppArmor is set but the target is Kickstart', () => {
    const { diagnostics } = emitKickstart(minimalRhel)
    expect(diagnostics).toContainEqual(
      expect.objectContaining({ severity: 'warning', field: 'security.apparmor' }),
    )
  })
})
