// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitKickstart > golden output: 'hardened-rhel' 1`] = `
"# Kickstart generated by linux-generators v0.1.0
text
lang en_US.UTF-8
keyboard --vckeymap=us --xlayouts='us'
timezone UTC --utc
network --device=link --bootproto=dhcp --activate --hostname=localhost.localdomain
rootpw --lock
user --name=operator --gecos="Ops" --groups=wheel
sshkey --username=operator "ssh-ed25519 AAAAEXAMPLE ops@bastion"
clearpart --all --initlabel
autopart --type=lvm --encrypted --passphrase=changeit
bootloader --location=mbr
selinux --enforcing
firewall --enabled --service=ssh
services --enabled=sshd,chronyd
firstboot --disable
reboot

%packages
@^minimal-environment
openssh-server
%end

%post --log=/var/log/ks-post.log
sed -i 's/^#\\?PermitRootLogin.*/PermitRootLogin no/' /etc/ssh/sshd_config
sed -i 's/^#\\?PasswordAuthentication.*/PasswordAuthentication no/' /etc/ssh/sshd_config
echo hardened > /etc/issue.d/10-stamp.conf
%end
"
`;

exports[`emitKickstart > golden output: 'minimal-rhel' 1`] = `
"# Kickstart generated by linux-generators v0.1.0
text
lang en_US.UTF-8
keyboard --vckeymap=us --xlayouts='us'
timezone UTC --utc
network --device=link --bootproto=dhcp --activate --hostname=localhost.localdomain
rootpw --lock
user --name=admin --groups=wheel
clearpart --all --initlabel
autopart --type=lvm
bootloader --location=mbr
selinux --enforcing
firewall --enabled --service=ssh
services --enabled=sshd,chronyd
firstboot --disable
reboot

%packages
@^minimal-environment
openssh-server
%end

%post --log=/var/log/ks-post.log
sed -i 's/^#\\?PermitRootLogin.*/PermitRootLogin no/' /etc/ssh/sshd_config
sed -i 's/^#\\?PasswordAuthentication.*/PasswordAuthentication no/' /etc/ssh/sshd_config
%end
"
`;

exports[`emitKickstart > golden output: 'static-ip-rhel' 1`] = `
"# Kickstart generated by linux-generators v0.1.0
text
lang en_US.UTF-8
keyboard --vckeymap=us --xlayouts='us'
timezone UTC --utc
network --device=ens192 --bootproto=static --ip=10.0.0.10 --netmask=255.255.255.0 --gateway=10.0.0.1 --nameserver=10.0.0.2,1.1.1.1 --activate --hostname=web01.example.com
rootpw --lock
user --name=admin --groups=wheel
clearpart --all --initlabel
autopart --type=lvm
bootloader --location=mbr
selinux --enforcing
firewall --enabled --service=ssh
services --enabled=sshd,chronyd
firstboot --disable
reboot

%packages
@^minimal-environment
openssh-server
%end

%post --log=/var/log/ks-post.log
sed -i 's/^#\\?PermitRootLogin.*/PermitRootLogin no/' /etc/ssh/sshd_config
sed -i 's/^#\\?PasswordAuthentication.*/PasswordAuthentication no/' /etc/ssh/sshd_config
%end
"
`;
